--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background: #f2f4f8;
+    background: #f6f2f8;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,8 +32,15 @@ body {
     cursor: pointer;
     transition: 0.3s;
     border-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
-
+.btn img{
+    width: 24px;
+    height: 24px;
+}
 .btn-1 {
     background: #3b82f6;
     box-shadow: 0 4px 12px rgba(59, 130, 246, 0.4);
@@ -58,9 +65,9 @@ body {
 .btn-4::before {
     content: "";
     position: absolute;
-    inset: -6px;
+    inset: -4px;
     border-radius: 18px;
-    border: 2px solid #bcd7ff;
+    border: 2px solid #3b82f6;
 }
 
 .btn-5 {
@@ -109,8 +116,6 @@ body {
     justify-content: center;
     gap: 8px;
     color: #fff;
-    font-size: 16px;
-    font-weight: 500;
     letter-spacing: 0.3px;
     border-radius: 0;
     background: linear-gradient(90deg,
